First Version of HTML lesson

--- a/recipes/brownies.html
+++ b/recipes/brownies.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Absolutely Best Brownies </h1>
-    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F943710.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="Chocolate cake" height="310" width="310">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F943710.jpg&q=60&c=sc&poi=auto&orient=true&h=512" alt="brownies image" height="310" width="310">
     <h2> <p> Description:</p>
         <p>These cake-like brownies are the most delicious, fudgy treats that I have ever eaten. They are so moist and super quick and easy to make. For best results, use Dutch-processed cocoa. For less cake-like brownies, use all-purpose flour instead of self-rising.</p>
         <p>Ingredients:</p></h2>
