--- a/recipes/strawberrycake.html
+++ b/recipes/strawberrycake.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> Strawberry Cake </h1>
-    <img src="https://www.allrecipes.com/thmb/CWTO88hsZsGQzMLskcCDnI_i72M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/60564-StrawberryCakeFromScratch-ddfms-4X3-0291-1-cd8254e28ea14112b5fc49e25cd08ff6.jpg" alt="Chocolate cake" height="330" width="350">
+    <img src="https://www.allrecipes.com/thmb/CWTO88hsZsGQzMLskcCDnI_i72M=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/60564-StrawberryCakeFromScratch-ddfms-4X3-0291-1-cd8254e28ea14112b5fc49e25cd08ff6.jpg" alt="strawberry image" height="330" width="350">
     <h2> <p> Description:</p>
         <p>This strawberry cake is easy to make from scratch with strawberry puree and strawberry gelatin. This recipe is worth its weight in gold to me as a caterer. I made this cake for a child's birthday party and it was a major hit! Frost with cream cheese frosting or chocolate ganache for a special treat.</p>
         <p>These are the ingredients you'll need to make this top-rated strawberry cake recipe:</p></h2>
